Break out the styling for the collapsed header into a mixin, and "put this to work" by giving JBrowse a collapsed header

--- a/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
@@ -1,13 +1,13 @@
+@import '~site/wdkCustomization/js/client/styles/collapsed-header-mixins.scss';
+
 body.vpdb-Body .vpdb-RootContainer__jbrowse {
+  @include collapsed-header-page-layout;
+
   .vpdb-Main {
     margin: 0;
     padding: 0;
     iframe {
       border: none;
     }
-  }
-
-  .ebrc-FooterPageDescriptionRow {
-    display: none;
   }
 }
