Rename "beta-*" theme properties to "superscript-*"; render "beta" text within the VEuPathDBHomePage component (versus as a pseudo-element in its CSS)

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -14,13 +14,13 @@
   $bckgrnd-img: themed('bckgrnd-img');
   $logo: themed('logo');
   $small-logo: themed('small-logo');
-  /* TODO Remove when we're out of beta */
-  $beta-position-top: themed('beta-position-top');
-  $beta-position-left: themed('beta-position-left');
-  $beta-font-size: themed('beta-font-size');
-  $beta-position-top-small: themed('beta-position-top-small');
-  $beta-position-left-small: themed('beta-position-left-small');
-  $beta-font-size-small: themed('beta-font-size-small');
+
+  $superscript-position-top: themed('superscript-position-top');
+  $superscript-position-left: themed('superscript-position-left');
+  $superscript-font-size: themed('superscript-font-size');
+  $superscript-position-top-small: themed('superscript-position-top-small');
+  $superscript-position-left-small: themed('superscript-position-left-small');
+  $superscript-font-size-small: themed('superscript-font-size-small');
 
   .vpdb-BgDark {
     background-color: $primary-color;
@@ -38,18 +38,17 @@
     .ebrc-HeaderBrandingContainer {
       position: relative;
 
-      a::after {
-        content: "beta";
+      .ebrc-HeaderBrandingSuperscript {
         font-style: italic;
         position: absolute;
-        @if ($beta-position-top) {
-          top: $beta-position-top;
+        @if ($superscript-position-top) {
+          top: $superscript-position-top;
         } @else {
           top: 0.8em;
         }
-        left: $beta-position-left;
-        @if ($beta-font-size) {
-          font-size: $beta-font-size;
+        left: $superscript-position-left;
+        @if ($superscript-font-size) {
+          font-size: $superscript-font-size;
         } @else {
           font-size: 1.4em;
         }
@@ -64,10 +63,10 @@
 
     &__collapsed {
       .ebrc-HeaderBrandingContainer {
-        a::after {
-          top: $beta-position-top-small;
-          left: $beta-position-left-small;
-          font-size: $beta-font-size-small;
+        .ebrc-HeaderBrandingSuperscript {
+          top: $superscript-position-top-small;
+          left: $superscript-position-left-small;
+          font-size: $superscript-font-size-small;
         }
       }
 
@@ -78,10 +77,10 @@
     
     @media screen and (max-width: $cramped-header-width) {
       .ebrc-HeaderBrandingContainer {
-        a::after {
-          top: $beta-position-top-small;
-          left: $beta-position-left-small;
-          font-size: $beta-font-size-small;
+        .ebrc-HeaderBrandingSuperscript {
+          top: $superscript-position-top-small;
+          left: $superscript-position-left-small;
+          font-size: $superscript-font-size-small;
         }
       }
 
