--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -39,21 +39,21 @@
       position: relative;
 
       .vpdb-HeaderBrandingSuperscript {
-        font-style: italic;
         position: absolute;
         @if ($superscript-position-top) {
           top: $superscript-position-top;
         } @else {
-          top: 0.8em;
+          top: 0.5em;
         }
         left: $superscript-position-left;
         @if ($superscript-font-size) {
           font-size: $superscript-font-size;
         } @else {
-          font-size: 1.4em;
+          font-size: 1em;
         }
         font-weight: 500;
         color: white;
+        white-space: nowrap;
       }
     }
 
