Move more generic stylesheets to Ebrc

--- a/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
@@ -1,4 +1,4 @@
-@import '~site/wdkCustomization/js/client/styles/collapsed-header-mixins.scss';
+@import 'ebrc-client/styles/collapsed-header-mixins.scss';
 
 body.vpdb-Body .vpdb-RootContainer__jbrowse {
   @include collapsed-header-page-layout;
