--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -1,12 +1,12 @@
 @import 'ebrc-client/styles/themes.scss';
-@import '~site/wdkCustomization/js/client/styles/breakpoints.scss';
-@import '~site/wdkCustomization/js/client/styles/default-layout.scss';
-@import '~site/wdkCustomization/js/client/styles/header.scss';
-@import '~site/wdkCustomization/js/client/styles/announcements.scss';
+@import 'ebrc-client/styles/breakpoints.scss';
+@import 'ebrc-client/styles/default-layout.scss';
+@import 'ebrc-client/styles/header.scss';
+@import 'ebrc-client/styles/announcements.scss';
 @import '~site/wdkCustomization/js/client/styles/search-pane.scss';
-@import '~site/wdkCustomization/js/client/styles/main.scss';
+@import 'ebrc-client/styles/main.scss';
 @import '~site/wdkCustomization/js/client/styles/news.scss';
-@import '~site/wdkCustomization/js/client/styles/footer.scss';
+@import 'ebrc-client/styles/footer.scss';
 @import '~site/wdkCustomization/js/client/styles/home-page-layout.scss';
 
 @include themify($child: '') {
