--- a/Site/webapp/wdkCustomization/js/client/styles/home-page-layout.scss
+++ b/Site/webapp/wdkCustomization/js/client/styles/home-page-layout.scss
@@ -1,4 +1,4 @@
-@import '~site/wdkCustomization/js/client/styles/breakpoints.scss';
+@import 'ebrc-client/styles/breakpoints.scss';
 
 body.vpdb-Body .vpdb-RootContainer {
   &__home {
