Move News and SearchPane styling from api -> ebrc

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -3,9 +3,9 @@
 @import 'ebrc-client/styles/default-layout.scss';
 @import 'ebrc-client/styles/header.scss';
 @import 'ebrc-client/styles/announcements.scss';
-@import '~site/wdkCustomization/js/client/styles/search-pane.scss';
+@import 'ebrc-client/styles/search-pane.scss';
 @import 'ebrc-client/styles/main.scss';
-@import '~site/wdkCustomization/js/client/styles/news.scss';
+@import 'ebrc-client/styles/news.scss';
 @import 'ebrc-client/styles/footer.scss';
 @import '~site/wdkCustomization/js/client/styles/home-page-layout.scss';
 
