--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -423,6 +423,7 @@ body.vpdb-Body {
         }
 
         .vpdb-Footer {
+          display: grid;
           position: fixed;
           bottom: 0;
           width: 100%;
