Fix bug that was causing, upon navigating from a non-home-page -> the home page in Safari, the thin footer to be rendered at the top of the screen

--- a/Site/webapp/wdkCustomization/js/client/styles/home-page-layout.scss
+++ b/Site/webapp/wdkCustomization/js/client/styles/home-page-layout.scss
@@ -38,6 +38,7 @@ body.vpdb-Body .vpdb-RootContainer {
       }
 
       .vpdb-Footer {
+        display: grid;
         position: fixed;
         bottom: 0;
         width: 100%;
