custom page for transcriptomics: hide learn link

--- a/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
@@ -6,6 +6,10 @@
     position: inherit;
   }
 
+  .wdk-QuestionFormDescriptionLink  {
+    display: none;
+  }
+
   .TableToolbar-Children {
     display: flex;
     justify-content: space-between;
