gene page transcriptomics table coverage iframe: add some right margin

--- a/Site/webapp/css/AllApiSites.css
+++ b/Site/webapp/css/AllApiSites.css
@@ -141,6 +141,14 @@ header {
   }
 
 
+/* ========================================================================= */
+/* Gene  page   - Transcriptomics, coverage graph                            */
+/* ========================================================================= */
+div.eupathdb-GbrowseContextContent {
+  margin-right: 2em;
+}
+
+
 
 
 /* ---------------------------------------------------------------
