--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -43,14 +43,15 @@
         @if ($superscript-position-top) {
           top: $superscript-position-top;
         } @else {
-          top: 0.5em;
+          top: 0.8em;
         }
         left: $superscript-position-left;
         @if ($superscript-font-size) {
           font-size: $superscript-font-size;
         } @else {
-          font-size: 1em;
+          font-size: 1.4em;
         }
+        font-style: italic;
         font-weight: 500;
         color: white;
         white-space: nowrap;
