--- a/Site/webapp/wdkCustomization/css/pathway.css
+++ b/Site/webapp/wdkCustomization/css/pathway.css
@@ -8,7 +8,7 @@
 }
 
 #eupathdb-PathwayRecord-cytoscape .eupathdb-Menu {
-  width: 100%;
+  width: auto;
   min-width: 0px;
 }
 
@@ -44,7 +44,7 @@
   white-space: nowrap;
 }
 
-.veupathdb-PathwayRecord-ResetDisplayButton {
+.veupathdb-PathwayRecord-ResetDisplayButton.btn {
   margin-left: 0.75em;
   margin-right: 0.75em;
 }
@@ -144,7 +144,7 @@
 
 .veupathdb-PathwaySearchById {
   width: 50em;
-  padding: 0 3em;
+  padding: 0.5em 3em;
 }
 
 .veupathdb-SearchByIdDialog .wdk-DialogContent {
