remove /service from SITE_BASE_URL

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
@@ -10,5 +10,5 @@ ACCTDB_CONNECTION={{ modelconfig_accountDb_connectionUrl }}
 ACCTDB_LOGIN={{ modelconfig_accountDb_login }}
 ACCTDB_PASSWORD={{ modelconfig_accountDb_password }}
 
-SITE_BASE_URL=https://{{ hostname }}/{{ webapp_ctx }}/service
+SITE_BASE_URL=https://{{ hostname }}/{{ webapp_ctx }}
 PROJECT_NAME={{ project }}
