change PROJECT_NAME to PROJECT_ID

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
@@ -11,4 +11,4 @@ ACCTDB_LOGIN={{ modelconfig_accountDb_login }}
 ACCTDB_PASSWORD={{ modelconfig_accountDb_password }}
 
 SITE_BASE_URL=https://{{ hostname }}/{{ webapp_ctx }}
-PROJECT_NAME={{ project }}
+PROJECT_ID={{ project }}
