add site search overrides

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -118,6 +118,12 @@
     }
   }
 
+  // site search overrides
+  .SiteSearch--CountsContainer, .SiteSearch--ResultTypeWidgetContainer {
+    border: 1px solid themed('secondary-color-border');
+    background: themed('secondary-color')
+  }
+
 }
 
 
