--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
@@ -12,3 +12,5 @@ ACCTDB_PASSWORD={{ modelconfig_accountDb_password }}
 
 SITE_BASE_URL=https://{{ hostname }}/{{ webapp_ctx }}
 PROJECT_ID={{ project }}
+
+COHORT={{ cohort }}
