Add OAuth values to template

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/container_env.j2
@@ -14,3 +14,7 @@ SITE_BASE_URL=https://{{ hostname }}/{{ webapp_ctx }}
 PROJECT_ID={{ project }}
 
 COHORT={{ cohort }}
+
+OAUTH_URL={{ modelconfig_oauthUrl }}
+OAUTH_CLIENT_ID={{ modelconfig_oauthClientId }}
+OAUTH_CLIENT_SECRET={{ modelconfig_oauthClientSecret }}
